# qgan-lamarr

./: .gitignore  README.md  pyproject.toml
ft3_runs/qubit_scaling/: single_gaussian.py
ft3_runs/qubit_scaling/ESU2/: single_gaussian.py  two_mixed_gaussian.py
ft3_runs/qubit_scaling/RYCZ/: single_gaussian.py  two_mixed_gaussian.py
qgan_lamarr/: __init__.py  dashboard.py  distributions.py  load_dp.py  manager.py  metrics.py  models.py  optimize.py  run_dashboard.py  tools.py
qgan_lamarr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: ADAM_tests.ipynb  ansatz_tests.ipynb  dashboard_tests.ipynb  dp_tests-Copy1.ipynb  dp_tests.ipynb  wasserstein_tests.ipynb
tests/.ipynb_checkpoints/: ADAM_tests-checkpoint.ipynb  dashboard_tests-checkpoint.ipynb  wasserstein_tests-checkpoint.ipynb
tests/adam/: ADAM_results_mixed.ipynb
tests/adam/.ipynb_checkpoints/: ADAM_results-checkpoint.ipynb  ADAM_results_mixed-checkpoint.ipynb  ADAM_results_more_bins-checkpoint.ipynb  ADAM_tests-checkpoint.ipynb  dp_ADAM_results-checkpoint.ipynb
tests/e1_balance_wass/: dashboard.ipynb  qgan.ipynb  wqgan.ipynb
tests/e1_balance_wass/.ipynb_checkpoints/: dashboard-checkpoint.ipynb  qgan-checkpoint.ipynb  wqgan-checkpoint.ipynb
tests/e2_wass_scaling/: dashboard.ipynb  wqgan.ipynb
tests/e2_wass_scaling/.ipynb_checkpoints/: wqgan-checkpoint.ipynb
tests/e3_ansatz/: dashboard.ipynb  wqgan.ipynb
tests/gradient-free/: tests_COBYLA.ipynb  tests_SPSA_less_shots.ipynb
tests/training_balance_exp/: ADAM_tests.ipynb  dashboard_tests.ipynb
(+1263 files in other folders)
