[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgan_lamarr"
version = "0.1.0"
description = "Quantum Generative Adversarial Networks"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "tensorflow",
    "keras",
    "qiskit",
    "qiskit-aer",
    "pennylane",
    "dash",
    "plotly",
    "tqdm",
    "uproot",
    "dask[dataframe]",
    "pyarrow",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qgan_lamarr*"]